18 March 2016: Ralph
	- Validate QNAME minimised NXDOMAIN responses.
	- If QNAME minimisation is enabled, do cache lookup for QTYPE NS in
	  harden-below-nxdomain.

17 March 2016: Ralph
	- Limit number of QNAME minimisation iterations.

17 March 2016: Wouter
	- Fix #746: Fix unbound sets CD bit on all forwards.
	  If no trust anchors, it'll not set CD bit when forwarding to another
	  server.  If a trust anchor, no CD bit on the first attempt to a
	  forwarder, but CD bit thereafter on repeated attempts to get DNSSEC.
	- iana portlist update.

16 March 2016: Wouter
	- Fix ip-transparent for ipv6 on FreeBSD, thanks to Nick Hibma.
	- Fix ip-transparent for tcp on freebsd.

15 March 2016: Wouter
	- ip_freebind: yesno option in unbound.conf sets IP_FREEBIND for
	  binding to an IP address while the interface or address is down.

14 March 2016: Wouter
	- Fix warnings in ifdef corner case, older or unknown libevent.
	- Fix compile for ub_event code with older libev.

11 March 2016: Wouter
	- Remove warning about unused parameter in event_pluggable.c.
	- Fix libev usage of dispatch return value.
	- No side effects in tolower() call, in case it is a macro.
	- For test put free in pluggable api in parenthesis.

10 March 2016: Wouter
	- Fixup backend2str for libev.

09 March 2016: Willem
	- User defined pluggable event API for libunbound
	- Fixup of compile fix for pluggable event API from P.Y. Adi
	  Prasaja.

09 March 2016: Wouter
	- Updated configure and ltmain.sh.
	- Updated L root IPv6 address.

07 March 2016: Wouter
	- Fix #747: assert in outnet_serviced_query_stop.
	- iana ports fetched via https.
	- iana portlist update.

03 March 2016: Wouter
	- configure tests for the weak attribute support by the compiler.

02 March 2016: Wouter
	- 1.5.8 release tag
	- trunk contains 1.5.9 in development.
	- iana portlist update.
	- Fix #745: unbound.py - idn2dname throws UnicodeError when idnname
	  contains trailing dot.

24 February 2016: Wouter